cmake_minimum_required(VERSION 3.0.0)
project(hotrod-c VERSION 0.1.0 DESCRIPTION "A C library for Infinispan hotrod protocol")

include(CTest)
enable_testing()
add_library(hotrod-c STATIC IMPORTED)
set_property(TARGET hotrod-c PROPERTY IMPORTED_LOCATION /home/rigazilla/git/hotrod-c/build/libhotrod-c.a)
add_executable(hotrod-example example/hotrodExample.cpp)
target_include_directories(hotrod-example PRIVATE include)
#find_library(hotrod-c hotrod-c /home/rigazilla/git/hotrod-c/build)
target_link_libraries(hotrod-example hotrod-c)